It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Apr 25, 2009
---------------------------------------------------------------------
- Installed [will_paginate] plugin.

Fri, Apr 24, 2009
---------------------------------------------------------------------
- Happy birthday -- we're 5 month old ;-)
- Make sure tasks don't get onto recently viewed items list.
- Added "completed", "reassigned", and "rescheduled" activity logs for tasks (closes LH #17).
 
Thu, Apr 23, 2009
---------------------------------------------------------------------
- Filter activities based on asset permissions, even for deleted assets.
- Pulled in first patches from fork (thanks, Scott!)

Wed, Apr 22, 2009
---------------------------------------------------------------------
- Filter activities based on asset permissions (existing assets only so far).

Tue, Apr 21, 2009
---------------------------------------------------------------------
- Honor object permissions when displaying activity log (LH #17).

Mon, Apr 20, 2009
---------------------------------------------------------------------
- Finished with recently viewed items sidebar panel (LH #28).

Sun, Apr 19, 2009
---------------------------------------------------------------------
- Refresh recently viewed items when creating, editing, or deleting core objects.

Sat, Apr 18, 2009
---------------------------------------------------------------------
- Scraped the idea of demo factories -- fixtures are easier to use and maintain.
- Updated demo fixtures and crm:demo:load task to simulate user activities and recently viewed items.
- Implemented "commented on" user activity type.

Fri, Apr 17, 2009
---------------------------------------------------------------------
- Back from LA and UCSB.

Thu, Apr 16, 2009
---------------------------------------------------------------------