@@ -227,6 +227,15 @@
   dt
     :padding 0px
 
+#paginate
+  :float right
+  :font-size 10px
+  :margin 4px 0px 0px 0px
+
+#loading
+  :float right
+  :margin 2px 0px 0px 0px
+
 // Single-row lists.
 //------------------------------------------------------------------------------
 .log
