@@ -1,0 +1,10 @@
+- items      ||= controller.controller_name
+- collection ||= instance_variable_get("@#{items}")
+- total      ||= instance_variable_get("@#{items}_total")
+#loading{ hidden }= image_tag("loading.gif", :size => "16x16")
+#paginate
+  - if collection.size < total
+    = link_to_function("Load more...", "crm.paginate('#{items}')")
+  - else
+    = render :partial => "common/total"
+#page{ hidden }= @page
