@@ -300,6 +300,15 @@ tt {
   .comment dt {
     padding: 0px; }
 
+#paginate {
+  float: right;
+  font-size: 10px;
+  margin: 4px 0px 0px 0px; }
+
+#loading {
+  float: right;
+  margin: 2px 0px 0px 0px; }
+
 .log {
   padding: 8px 0px 0px 0px; }
   .log h3 {
