@@ -15,8 +15,18 @@ describe AccountsController do
       @accounts = [ Factory(:account, :user => @current_user) ]
       get :index
       assigns[:accounts].should == @accounts
+      assigns[:accounts_total].should == @accounts.size
       response.should render_template("accounts/index")
     end
+
+    # it "should expose all accounts as @accounts and render [account] partial" do
+    #   @accounts = [ Factory(:account, :user => @current_user), Factory(:account, :user => @current_user) ]
+    #   xhr :get, :index
+    #   assigns[:accounts].should == @accounts
+    #   assigns[:accounts_total].should == @accounts.size
+    #   response.should render_template("accounts/account")
+    #   # response.expects_render(:partial => "account", :collection => @accounts)
+    # end
 
     describe "with mime type of XML" do
 
